+ added calculateOverlap
+ getUniqueTaxa & getTopTaxa: added option for alphabetical order

Changes in version 1.3.x 
+ name change: testForExperimentCrossCorrelation to testExperimentCrossCorrelation
+ getExperimentCrossCorrelation: Filtering disabled by default, option to suppress warnings
+ bugfix: taxonomyTree gave error if taxa were agglomerated at highest level (taxa name mismatch)
+ bugfix: subsampleCounts errors if no samples are found after subsampling
+ added loadFromMetaphlan
+ renamed calculateUniFrac to calculateUnifrac 
+ added na.rm option to getTopTaxa function   
+ bugfix: makeTreeSEFromPseq -- orientation of assay is taken into account
+ bugfix: getExperimentCrossCorrelation's "matrix"" mode works with features named equally
+ bugfix: getExperimentCrossCorrelation's calculates correlations correctly with features named equally
+ getExperimentCrossCorrelation name changed to getExperimentCrossAssociation
+ getExperimentCrossAssociation: user's own function supported, sort in mode == table enabled
+ getExperimentCrossAssociation: added MARGIN & paired options, efficiency of algorithm improved
+ Added *Features aliases for *Taxa functions
+ *RDA functions utilize vegan:dbrda instead of vegan:rda
+ Sped up estimateDivergence by removing unnecessary pairwise comparisons
+ Added new internal function .calculate_reference_distance to calculate distance to a single reference sample
+ added new skin microbiome example data set 'peerj13075'
+ added splitOn and unsplitOn functions
+ CLR transformation: remove internal relative transformation
+ Replace 'abund_values' argument with 'assay_name'
+ getExpCrossCorr: added altExp option
+ added detection threshold option to getTopTaxa
+ makeSummarizedExperimentFromBiom is now makeTreeSummarizedExperimentFromBiom
+ Added mergeSE function
+ bugfix: loadFromBiom

Changes in version 1.5.x 
+ Added HintikkaXOData
+ Added sample metadata option to getExperimentCrossAssociation